[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'bitstoreruntime-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.bitstoreruntime-runtime]
default-features = false
path = '..'

[workspace]
members = []

[features]
default = []
std = ['bitstoreruntime-runtime/std']
